project/stage/tests/reject/op_temp.ul
// This should be accepted by the antlr grammar, but the types are wrong so should fail in a later stage 
void main(int blah){
  red - blue;
  red + blue;
  dah == bah;
  seven < six;
  what * who;
}